[gd_scene load_steps=5 format=3 uid="uid://pbn0te3y2mvy"]

[ext_resource type="Script" uid="uid://b31pa3w87eh03" path="res://scripts/platform.gd" id="1_nlgqw"]
[ext_resource type="Texture2D" uid="uid://cpsms6jp4lmbv" path="res://assets/cloud.png" id="2_nlgqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlgqw"]
size = Vector2(204.5, 55)

[sub_resource type="CircleShape2D" id="CircleShape2D_nlgqw"]
radius = 636.284

[node name="Platform" type="CharacterBody2D" node_paths=PackedStringArray("collision_shape")]
script = ExtResource("1_nlgqw")
collision_shape = NodePath("CollisionShape2D")
_is_stormy = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("2_nlgqw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nlgqw")
disabled = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_nlgqw")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
